--- a/01_Python_REST API/REST_API/01_REST_API_sample.ipynb
+++ b/01_Python_REST API/REST_API/01_REST_API_sample.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "01dae671-88dc-4c7d-a170-66182f99b5ff",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,9 @@
      "output_type": "stream",
      "text": [
       "GET 요청 결과: [{'userId': 1, 'id': 1, 'title': 'sunt aut facere repellat provident occaecati excepturi optio reprehenderit', 'body': 'quia et suscipit\\nsuscipit recusandae consequuntur expedita et cum\\nreprehenderit molestiae ut ut quas totam\\nnostrum rerum est autem sunt rem eveniet architecto'}, {'userId': 1, 'id': 2, 'title': 'qui est esse', 'body': 'est rerum tempore vitae\\nsequi sint nihil reprehenderit dolor beatae ea dolores neque\\nfugiat blanditiis voluptate porro vel nihil molestiae ut reiciendis\\nqui aperiam non debitis possimus qui neque nisi nulla'}]\n",
-      "POST 요청 결과: {'title': '새로운 제목', 'body': '새로운 내용', 'userId': 1, 'id': 101}\n"
+      "POST 요청 결과: {'title': '새로운 제목', 'body': '새로운 내용', 'userId': 1, 'id': 101}\n",
+      "PUT 요청 결과: {'title': '수정된 제목', 'body': '수정된 내용', 'id': 1}\n",
+      "DELETE 요청 결과: Deleted successfully\n"
      ]
     }
    ],
@@ -301,7 +303,7 @@
     "    print(\"GET 요청 결과:\", get_posts()[:2])  # 처음 두 개의 게시글만 출력\n",
     "    print(\"POST 요청 결과:\", create_post(\"새로운 제목\", \"새로운 내용\", 1))\n",
     "    print(\"PUT 요청 결과:\", update_post(1, \"수정된 제목\", \"수정된 내용\"))\n",
-    "    print(\"DELETE 요청 결과:\", delete_post(1))\n"
+    "    print(\"DELETE 요청 결과:\", delete_post(1))"
    ]
   },
   {
