--- a/01_Python_REST API/REST_API/02_Flask_basic.ipynb
+++ b/01_Python_REST API/REST_API/02_Flask_basic.ipynb
@@ -75,10 +75,9 @@
     "/my_flask_app\r\n",
     "│-- app.py\r\n",
     "│-- /templates\r\n",
-    "│   ├── index.h\n",
+    "│   ├── indetmlx.h\n",
     "\n",
-    "아래 템플릿 파일을 templates/index.html 로 먼저 저장해 놓는다\n",
-    "ml\r\n"
+    "아래 템플릿 파일을 templates/index.html 로 먼저 저장해 ml\r\n"
    ]
   },
   {
