--- a/01_Python_REST API/REST_API/02_Flask_basic.ipynb
+++ b/01_Python_REST API/REST_API/02_Flask_basic.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e850c13d-ad27-47fa-9633-02530d06b083",
+   "id": "1975c8b3-0990-4f3e-a4c5-fa5fc8938ca2",
    "metadata": {},
    "source": [
-    "# Flask 웹 프레임워크\n",
+    "## Flask 웹 프레임워크\n",
     "### [1] Flask 기본 앱 실행"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3f3dc8ba-9e58-4d77-a10f-bc48fad883c6",
+   "execution_count": 24,
+   "id": "813eeb02-7a41-408f-9520-597ae166e9f8",
    "metadata": {},
    "outputs": [
     {
@@ -29,13 +29,14 @@
      "text": [
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
-      "Press CTRL+C to quit\n"
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [06/Feb/2025 11:45:14] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Feb/2025 11:45:14] \"GET /posts/1 HTTP/1.1\" 200 -\n"
      ]
     }
    ],
    "source": [
-    "# pip install flask\n",
-    "\n",
+    "# ! pip install flask\n",
     "from flask import Flask\n",
     "\n",
     "app = Flask(__name__)\n",
@@ -44,22 +45,21 @@
     "def home():\n",
     "    return \"Hello, Flask!\"\n",
     "\n",
+    "@app.route('/posts/1')\n",
+    "def posts():\n",
+    "    return \"나는 데이터 입니다\"\n",
+    "    \n",
+    "@app.route('/favicon.ico')\n",
+    "def favicon():\n",
+    "    return '',204  # No Content 응답\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    app.run(debug=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "61152b03-8081-45b6-ad38-0dc21befd0b3",
-   "metadata": {},
-   "source": [
-    "#####  Jupyter Notebook이나 IPython 환경에서 app.run(debug=True)를 실행하면 자동으로 SystemExit 예외가 발생할 수 있다.\n",
-    "#####     이는 Flask의 개발 서버가 자체적으로 실행을 관리하는 방식과 Jupyter Notebook의 실행 방식이 충돌하기 때문이다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ac9c13be-1829-4921-822c-9c198af9c3a9",
+   "id": "e0c95c71-29cc-4b6e-850e-16611782b589",
    "metadata": {},
    "source": [
     "### [2] 라우팅 및 동적 처리"
@@ -67,24 +67,17 @@
   },
   {
    "cell_type": "raw",
-   "id": "a8c9efc9-a649-4278-bd07-998d3be91095",
+   "id": "9c983286-1704-40e7-ab4f-24dcd80936b7",
    "metadata": {},
    "source": [
     "Flask는 기본적으로 templates 폴더에서 HTML 파일을 찾습니다. 프로젝트 폴더를 다음과 같이 구성하세요.\n",
     "\n",
-    "/my_flask_app\r\n",
-    "│-- app.py\r\n",
-    "│-- /templates\r\n",
-    "│   ├── indetmlx.h\n",
+    "/my_flask_app\n",
+    "│-- app.py\n",
+    "│-- /templates\n",
+    "│   ├── index.html\n",
     "\n",
-    "아래 템플릿 파일을 templates/index.html 로 먼저 저장해 ml\r\n"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "03d91560-22bd-4d32-83a7-2ddb77b7dd35",
-   "metadata": {},
-   "source": [
+    "아래 템플릿 파일을 templates/index.html 로 먼저 저장해 놓는다\n",
     "<!DOCTYPE html>\n",
     "<html>\n",
     "<head>\n",
@@ -98,8 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "75f24861-c2b6-4bd6-bbc8-dfcf2e1fc02f",
+   "execution_count": 38,
+   "id": "8c12cf3c-e7ea-4510-b3df-51e41e08c0f7",
    "metadata": {},
    "outputs": [
     {
@@ -128,21 +121,21 @@
     "@app.route('/')\n",
     "def home():\n",
     "    return \"Hello, Flask!\"\n",
-    "    \n",
+    "\n",
     "@app.route('/hello/<name>')\n",
     "def hello(name):\n",
-    "    return render_template('index.html', name=name)\n",
+    "    return render_template('index.html',name=name)\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "     app.run(debug=False)\n",
-    "\n",
+    "    app.run(debug=False)\n",
+    "    \n",
     "# 웹 브라우저에서 다음 주소로 이동하여 결과를 확인\n",
-    "# http://127.0.0.1:5000/hello/홍길동"
+    "# http://127.0.0.1:5000/hello/홍길동    "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5f239d37-8947-41d8-bb1b-75b4477d8c3d",
+   "id": "7de9b74f-834d-41f5-9752-03b0c10c2287",
    "metadata": {},
    "source": [
     "### [3] Flask 웹서버에서 HTTP 메서드 (GET,POST등) 처리\n",
@@ -156,8 +149,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "30bdec96-8b06-4078-9f50-ab99220efd41",
+   "execution_count": null,
+   "id": "7241c3f9-e71c-4f2f-a854-68078fc0503c",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +167,12 @@
      "text": [
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
-      "Press CTRL+C to quit\n"
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [06/Feb/2025 14:53:05] \"GET /data HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Feb/2025 14:53:07] \"POST /data HTTP/1.1\" 201 -\n",
+      "127.0.0.1 - - [06/Feb/2025 14:53:10] \"PUT /data/name HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Feb/2025 14:53:14] \"DELETE /data/name HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Feb/2025 14:53:22] \"GET /data HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -190,20 +188,23 @@
     "def home():\n",
     "    return \"Hello, Flask!\"\n",
     "\n",
+    "# GET 요청 처리\n",
     "@app.route('/data', methods=['GET'])\n",
     "def get_data():\n",
     "    return jsonify(data_store), 200\n",
     "\n",
+    "# POST 요청 처리\n",
     "@app.route('/data', methods=['POST'])\n",
     "def create_data():\n",
-    "    new_data = request.json\n",
-    "    key = new_data.get('key')\n",
-    "    value = new_data.get('value')\n",
+    "    new_data = request.json        #  {'key':'name','value':'홍길동'}\n",
+    "    key = new_data.get('key')      #  'name'\n",
+    "    value = new_data.get('value')  #  홍길동\n",
     "    if key and value:\n",
     "        data_store[key] = value\n",
-    "        return jsonify({\"message\": \"Data added successfully\"}), 201\n",
-    "    return jsonify({\"error\": \"Invalid data\"}), 400\n",
+    "        return jsonify({\"message\":\"Data added succesfully\",key:value} ), 201\n",
+    "    return jsonify({\"error\":\"Invalid data\"}), 400   \n",
     "\n",
+    "# PUT 요청 처리\n",
     "@app.route('/data/<key>', methods=['PUT'])\n",
     "def update_data(key):\n",
     "    if key not in data_store:\n",
@@ -227,90 +228,56 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "01f0352a-60e3-491b-9d0a-d296628f2c01",
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e3166c26-fe9b-4160-94f9-2f654671e80b",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "name\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "### Flask Web Server 호출 클라이언트 requests 사용 소스 코드\n",
-    "#### [별도의 앱으로 따로 실행할것]"
+    "a = { 'key':'name'}\n",
+    "print(a['key'])\n",
+    "# print(a['value'])  # KeyError: 'value\n",
+    "print(a.get('value'))  # key가 없어도 정상 실행"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6de9acd1-2fcd-495d-b677-f05423485a00",
+   "id": "d4095339-a51c-4f9b-bbb0-a27049aa99a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14b26b0a-99d0-4e71-a68c-31ab987efc20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# (1) GET /data - 저장된 모든 데이터 조회\n",
-    "# Web Browser : http://127.0.0.1:5000/data\n",
-    "\n",
-    "# shell 명령\n",
-    "# curl -X GET http://127.0.0.1:5000/data\n",
-    "\n",
-    "# windows powershell 명령 \n",
-    "# Invoke-WebRequest -Uri \"http://127.0.0.1:5000/data\" -Method GET\n",
-    "\n",
-    "# Web Browser : http://127.0.0.1:5000/data\n",
-    "\n",
-    "# 파이썬 코드 \n",
-    "import requests\n",
-    "response = requests.get(\"http://127.0.0.1:5000/data\")\n",
-    "print(response.json())"
+    "a = { 'key':'name'}\n",
+    "print(a['key'])\n",
+    "# print(a['value'])  # KeyError: 'value\n",
+    "print(a.get('value'))  # key가 없어도 정상 실행"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f99aa976-74ef-4f3b-b82e-15324dc97891",
+   "id": "e7628279-0496-4935-b8a9-02aa08d486d7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# (2) POST /data - 데이터 추가 (key, value 필요)\n",
-    "\n",
-    "# curl -X POST http://127.0.0.1:5000/data -H \"Content-Type: application/json\" -d '{\"key\": \"name\", \"value\": \"Jane\"}'\n",
-    "# Invoke-RestMethod -Uri \"http://127.0.0.1:5000/data\" -Method POST -ContentType \"application/json\" -Body '{\"key\": \"name\", \"value\": \"Jane\"}'\n",
-    "\n",
-    "import requests\n",
-    "data = {\"key\": \"name\", \"value\": \"Tom\"}\n",
-    "response = requests.post(\"http://127.0.0.1:5000/data\", json=data)\n",
-    "print(response.json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36a5d504-1c07-40c8-b8f9-24a4bb1bd6d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# (3) PUT /data/<key> - 특정 key 값 업데이트\n",
-    "\n",
-    "# curl -X PUT http://127.0.0.1:5000/data/name -H \"Content-Type: application/json\" -d '{\"value\": \"John\"}'\n",
-    "# Invoke-RestMethod -Uri \"http://127.0.0.1:5000/data/name\" -Method PUT -ContentType \"application/json\" -Body '{\"value\": \"John\"}'\n",
-    "\n",
-    "import requests\n",
-    "data = {\"value\": \"John\"}\n",
-    "response = requests.put(\"http://127.0.0.1:5000/data/name\", json=data)\n",
-    "print(response.json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c851f5a4-c9c1-4c2b-924a-e090e701647d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# (4) DELETE /data/<key> - 특정 key 데이터 삭제\n",
-    "\n",
-    "# curl -X DELETE http://127.0.0.1:5000/data/name\n",
-    "# Invoke-RestMethod -Uri \"http://127.0.0.1:5000/data/name\" -Method DELETE\n",
-    "\n",
-    "import requests\n",
-    "response = requests.delete(\"http://127.0.0.1:5000/data/name\")\n",
-    "print(response.json())"
-   ]
+   "source": []
   }
  ],
  "metadata": {
