--- a/01_Python_REST API/REST_API/03_requests_client_test_flask_server.ipynb
+++ b/01_Python_REST API/REST_API/03_requests_client_test_flask_server.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3a6c9cf2-e4ac-4fe0-8fa7-324e19dfa221",
+   "id": "13a82a71-f5d5-45dc-b566-3f950fcc8a06",
    "metadata": {},
    "source": [
     "### Flask Web Server 호출 클라이언트 requests 사용 소스 코드\n",
@@ -11,8 +11,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2aa93864-90d8-459d-a571-2c24a13b557c",
+   "execution_count": 20,
+   "id": "09e6efe2-285d-46a7-b123-f6c9a0fdc9a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'Hello, Flask!'\n",
+      "나는 데이터 입니다\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"http://127.0.0.1:5000\"\n",
+    "response = requests.get(url)\n",
+    "print(response.content)\n",
+    "\n",
+    "response = requests.get(url + \"/posts/1\")\n",
+    "print(response.content.decode('utf-8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "aa85d522-ca50-4109-9b82-a724523c8582",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!DOCTYPE html>\n",
+      "<html>\n",
+      "<head>\n",
+      "    <title>Flask Example</title>\n",
+      "</head>\n",
+      "<body>\n",
+      "    <h1>Hello, 홍길동!</h1>\n",
+      "</body>\n",
+      "</html>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# html template을 사용한 서버에 요청\n",
+    "url = \"http://127.0.0.1:5000\"\n",
+    "response = requests.get(url + \"/hello/홍길동\")\n",
+    "print(response.content.decode('utf-8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "941b1f65-43e0-4521-8ad5-82e4ff36fbbb",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +89,6 @@
     "\n",
     "# Web Browser : http://127.0.0.1:5000/data\n",
     "\n",
-    "# 파이썬 코드 (별도의 앱으로 따로 실행할것)\n",
     "import requests\n",
     "response = requests.get(\"http://127.0.0.1:5000/data\")\n",
     "print(response.json())"
@@ -42,15 +96,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "77f605fb-94ac-48cf-913f-9318efed0907",
+   "execution_count": 93,
+   "id": "db2f542a-8481-4036-b6a9-e4aca00ac040",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'message': 'Data added successfully'}\n"
+      "{'message': 'Data added succesfully', 'name': '홍길동'}\n"
      ]
     }
    ],
@@ -61,15 +115,15 @@
     "# Invoke-RestMethod -Uri \"http://127.0.0.1:5000/data\" -Method POST -ContentType \"application/json\" -Body '{\"key\": \"name\", \"value\": \"Jane\"}'\n",
     "\n",
     "import requests\n",
-    "data = {\"key\": \"name\", \"value\": \"Tom\"}\n",
-    "response = requests.post(\"http://127.0.0.1:5000/data\", json=data)\n",
+    "data = {'key':'name','value':'홍길동'}\n",
+    "response = requests.post(\"http://127.0.0.1:5000/data\",json=data)\n",
     "print(response.json())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ae736e50-b636-4dd3-8ab8-2cb0b87e2047",
+   "execution_count": 95,
+   "id": "43b6d52b-d398-40b7-9b4d-f1fd2469791a",
    "metadata": {},
    "outputs": [
     {
@@ -87,15 +141,16 @@
     "# Invoke-RestMethod -Uri \"http://127.0.0.1:5000/data/name\" -Method PUT -ContentType \"application/json\" -Body '{\"value\": \"John\"}'\n",
     "\n",
     "import requests\n",
-    "data = {\"value\": \"John\"}\n",
-    "response = requests.put(\"http://127.0.0.1:5000/data/name\", json=data)\n",
+    "import requests\n",
+    "data = {'value':'김철수'}\n",
+    "response = requests.put(\"http://127.0.0.1:5000/data/name\",json=data)\n",
     "print(response.json())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "4e2380c9-86e0-4657-81cd-8ea1b37e085c",
+   "execution_count": 97,
+   "id": "422da585-13db-49a2-882a-f071665e6153",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cbaccab-ee0c-4f16-9332-2f634ff8dcb8",
+   "id": "0d2466e1-a14f-4c46-bc75-a5d7b52b229a",
    "metadata": {},
    "outputs": [],
    "source": []
