--- a/02_OpenAI API 사용 챗봇 개발/03_프롬프트엔지니어링 기법.ipynb
+++ b/02_OpenAI API 사용 챗봇 개발/03_프롬프트엔지니어링 기법.ipynb
@@ -320,9 +320,465 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1994f89a-7234-414f-9297-c82702cb5b94",
+   "metadata": {},
+   "source": [
+    "### SC(Self-Consistency) Prompting\n",
+    ": 여러번 질의해서 가장 빈도가 높은 답을 선택한다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "2e8b0fa0-0568-499e-a888-10777c26a103",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Responses:\n",
+      "Response 1: 철수가 가지고 있는 사과의 개수는 11개입니다.\n",
+      "철수는 처음에 10개의 사과를 가졌고, 이후 매일 2개씩 먹어서 6개가 소비되었습니다. \n",
+      "따라서 오늘 점심에 어머니가 사다 주신 5개의 사과를 더해 9개가 된 후, 친구에게 2개를 주어 7개가 남게 됩니다. \n",
+      "따라서 철수는 총 11개의 사과를 가지고 있습니다.\n",
+      "Response 2: 철수는 처음에 10개의 사과를 가졌고, 매일 아침에 2개씩 먹어서 3일 동안 6개를 먹었습니다. 따라서 10 - 6 = 4개의 사과가 남았습니다.\n",
+      "어머니께서 5개의 사과를 더 사다 주었으므로, 4 + 5 = 9개의 사과가 있었습니다.\n",
+      "친구에게 2개를 주었으므로, 9 - 2 = 7개의 사과가 남았습니다.\n",
+      "따라서 철수는 총 7개의 사과를 가지고 있습니다.\n",
+      "Response 3: 철수는 처음에 10개의 사과를 가졌고, 매일 아침에 2개씩 먹었으므로 2일 동안 4개를 먹었습니다.\n",
+      "따라서 처음에는 10 - 4 = 6개의 사과가 남았습니다.\n",
+      "어머니께서 사과 5개를 더 사다 주었으므로 6 + 5 = 11개의 사과가 되었습니다.\n",
+      "친구에게 2개를 주었으므로 11 - 2 = 9개의 사과가 남게 됩니다.\n",
+      "따라서 철수는 총 9개의 사과를 가지고 있습니다.\n",
+      "Response 4: 철수는 현재 11개의 사과를 가지고 있습니다. 처음에 10개를 가졌고, 매일 아침에 2개씩 먹어서 6개가 소진되었습니다. 어머니께서 5개를 사다 주셨으므로 10-6+5=9개가 되었습니다. 그리고 친구에게 2개를 주어서 9-2=7개가 남았습니다. 따라서 철수는 현재 7개의 사과를 가지고 있습니다.\n",
+      "Response 5: 철수는 총 11개의 사과를 가지고 있습니다. 처음에 10개를 가졌고, 그저께부터 오늘까지 매일 2개씩 먹어서 6개를 소비했고, 어머니께서 5개를 더 사다 주셨기 때문에 11개가 됩니다. 이후 친구에게 2개를 주었기 때문에 남은 사과는 9개가 됩니다.\n",
+      "\n",
+      "Most Consistent Answer:\n",
+      "철수가 가지고 있는 사과의 개수는 11개입니다.\n",
+      "철수는 처음에 10개의 사과를 가졌고, 이후 매일 2개씩 먹어서 6개가 소비되었습니다. \n",
+      "따라서 오늘 점심에 어머니가 사다 주신 5개의 사과를 더해 9개가 된 후, 친구에게 2개를 주어 7개가 남게 됩니다. \n",
+      "따라서 철수는 총 11개의 사과를 가지고 있습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "# 동일한 질문에 대해 여러 번의 답변을 생성하여 Self-Consistency 유도\n",
+    "def generate_responses(prompt,n=5):\n",
+    "    responses = []\n",
+    "    for _ in range(n):\n",
+    "        response = client.chat.completions.create(\n",
+    "            model = \"gpt-3.5-turbo\",\n",
+    "            # model = \"gpt-4o-mini\",\n",
+    "            messages = [ {\"role\": \"user\",  \"content\": prompt}],\n",
+    "            temperature = 0.7,  # 다양성 확보를 위해 온도를 높게 설정\n",
+    "            top_p = 1,\n",
+    "            frequency_penalty=0,\n",
+    "            presence_penalty=0            \n",
+    "        )\n",
+    "        responses.append(response.choices[0].message.content)\n",
+    "    return responses  \n",
+    "\n",
+    "# 가장 자주 등장하는 답변을 선택\n",
+    "# response_count.most_common() 메서드는 Counter 객체에 저장된 요소들의 \n",
+    "# 빈도수를 기준으로 정렬된 리스트를 반환,  [0][0]는 첫번째 요소 선택\n",
+    "def select_most_consistent_response(responses):        \n",
+    "    response_count = Counter(responses)        \n",
+    "    most_common_response = response_count.most_common(1)[0][0]    \n",
+    "    return most_common_response\n",
+    "\n",
+    "# 문제 정의\n",
+    "prompt = \"\"\"\n",
+    "철수에게는 사과가 10개 있었습니다. 그저께부터 오늘까지 매일 아침에 2개씩 먹었습니다.\n",
+    "오늘 점심에 어머니께서 사과 5개를 더 사다 주셨습니다.\n",
+    "오늘 저녁에 친구에게 2개를 주었습니다.\n",
+    "철수는 총 몇 개의 사과를 가지고 있을까요?\n",
+    "\"\"\"\n",
+    "\n",
+    "# 여러 번 답변을 생성\n",
+    "responses = generate_responses(prompt,n=5)\n",
+    "\n",
+    "# 가장 일관성 있는 답변 선택\n",
+    "final_answer = select_most_consistent_response(responses)\n",
+    "\n",
+    "# 결과 출력\n",
+    "print(\"Generated Responses:\")\n",
+    "for i, response in enumerate(responses,1):\n",
+    "    print(f\"Response {i}: {response}\")\n",
+    "\n",
+    "print(\"\\nMost Consistent Answer:\")\n",
+    "print(final_answer)     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "fcffb559-858c-4b6b-a33d-f032cc35b6b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# responses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "ae40e46e-c54a-4b8f-b14b-903c8e97202a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# response_count = Counter(responses)        \n",
+    "# # print(response_count)\n",
+    "# print(response_count.most_common(1))\n",
+    "# print(response_count.most_common(1)[0])\n",
+    "# print(response_count.most_common(1)[0][0])\n",
+    "# most_common_response = response_count.most_common(1)[0][0] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "id": "141880de-45df-4e40-924f-d7ed7addd355",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1번째 샘플:\n",
+      "이 문제를 해결하기 위해서는 생존자들이 강을 건너는 최적의 순서를 찾아야 합니다. 각 생존자의 강을 건너는 시간은 다음과 같습니다:\n",
+      "\n",
+      "- A: 3분\n",
+      "- B: 4분\n",
+      "- C: 7분\n",
+      "- D: 12분\n",
+      "\n",
+      "최적의 방법은 다음과 같습니다:\n",
+      "\n",
+      "1. A(3분)와 B(4분)가 함께 건너갑니다. (총 4분)\n",
+      "2. A(3분)가 돌아옵니다. (총 3분, 누적 7분)\n",
+      "3. C(7분)와 D(12분)가 함께 건너갑니다. (총 12분, 누적 19분)\n",
+      "4. B(4분)가 돌아옵니다. (총 4분, 누적 23분)\n",
+      "5. A(3분)와 B(4분)가 함께 건너갑니다. (총 4분, 누적 27분)\n",
+      "\n",
+      "따라서 모든 생존자가 강을 건너는 데 걸리는 총 소요 시간은 27분입니다.\n",
+      "\n",
+      "정답: 27분\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "2번째 샘플:\n",
+      "이 문제를 해결하기 위해서는 생존자들이 강을 건너는 시간을 최소화해야 합니다. 각 생존자의 강을 건너는 시간은 다음과 같습니다:\n",
+      "\n",
+      "- A: 3분\n",
+      "- B: 4분\n",
+      "- C: 7분\n",
+      "- D: 12분\n",
+      "\n",
+      "효율적인 방법은 다음과 같습니다:\n",
+      "\n",
+      "1. A(3분)와 B(4분)가 함께 강을 건넙니다. (4분 소요)\n",
+      "2. A(3분)가 돌아옵니다. (3분 소요)\n",
+      "3. C(7분)와 D(12분)가 함께 강을 건넙니다. (12분 소요)\n",
+      "4. B(4분)가 돌아옵니다. (4분 소요)\n",
+      "5. A(3분)와 B(4분)가 함께 강을 건넙니다. (4분 소요)\n",
+      "\n",
+      "이 과정을 통해 총 소요 시간을 계산하면:\n",
+      "\n",
+      "4 + 3 + 12 + 4 + 4 = 27분\n",
+      "\n",
+      "따라서, 모든 생존자가 강을 건너는 데 걸리는 총 소요 시간은 다음과 같습니다.\n",
+      "\n",
+      "정답: 27분\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "3번째 샘플:\n",
+      "이 문제를 해결하기 위해서는 생존자들이 강을 건너는 시간을 최소화하는 전략을 세워야 합니다. 각 생존자의 강을 건너는 시간은 다음과 같습니다:\n",
+      "\n",
+      "- A: 3분\n",
+      "- B: 4분\n",
+      "- C: 7분\n",
+      "- D: 12분\n",
+      "\n",
+      "가장 효율적인 방법은 다음과 같습니다:\n",
+      "\n",
+      "1. A와 B가 함께 강을 건넙니다. (4분 소요)\n",
+      "   - 현재: C, D (강 이쪽), A, B (강 저쪽)\n",
+      "   \n",
+      "2. A가 돌아옵니다. (3분 소요)\n",
+      "   - 현재: C, D, A (강 이쪽), B (강 저쪽)\n",
+      "\n",
+      "3. C와 D가 함께 강을 건넙니다. (12분 소요)\n",
+      "   - 현재: A (강 이쪽), B (강 저쪽), C, D (강 저쪽)\n",
+      "\n",
+      "4. B가 돌아옵니다. (4분 소요)\n",
+      "   - 현재: A, B (강 이쪽), C, D (강 저쪽)\n",
+      "\n",
+      "5. A와 B가 함께 강을 건넙니다. (4분 소요)\n",
+      "   - 현재: (모두 강 저쪽)\n",
+      "\n",
+      "이제 모든 생존자가 강을 건넜습니다. 각 단계에서 소요된 시간을 합산하면:\n",
+      "\n",
+      "- 4 + 3 + 12 + 4 + 4 = 27분\n",
+      "\n",
+      "따라서 총 소요 시간은 27분입니다.\n",
+      "\n",
+      "정답: 27분\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "4번째 샘플:\n",
+      "생존자들의 강을 건너는 최적의 방법은 다음과 같습니다:\n",
+      "\n",
+      "1. 3분과 4분이 함께 강을 건넙니다. (4분 소요)\n",
+      "2. 3분이 배를 타고 돌아옵니다. (3분 소요)\n",
+      "3. 7분과 12분이 함께 강을 건넙니다. (12분 소요)\n",
+      "4. 4분이 배를 타고 돌아옵니다. (4분 소요)\n",
+      "5. 3분과 4분이 다시 함께 강을 건넙니다. (4분 소요)\n",
+      "\n",
+      "이 과정을 통해 총 소요 시간은 다음과 같습니다:\n",
+      "4 + 3 + 12 + 4 + 4 = 27분\n",
+      "\n",
+      "따라서, 정답은 다음과 같습니다:\n",
+      "정답: 27분\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "5번째 샘플:\n",
+      "이 문제를 해결하기 위해서는 생존자들이 강을 건너는 최적의 순서를 찾아야 합니다. 각 생존자의 강을 건너는 시간은 다음과 같습니다:\n",
+      "\n",
+      "- A: 3분\n",
+      "- B: 4분\n",
+      "- C: 7분\n",
+      "- D: 12분\n",
+      "\n",
+      "효율적으로 강을 건너기 위해 다음과 같은 방법을 사용할 수 있습니다:\n",
+      "\n",
+      "1. A와 B가 함께 강을 건넙니다. (4분 소요)\n",
+      "   - A와 B가 강을 건넜으므로, B가 등불을 가지고 돌아옵니다. (4분 소요)\n",
+      "   \n",
+      "2. C와 D가 함께 강을 건넙니다. (12분 소요)\n",
+      "   - C와 D가 강을 건넜으므로, A가 등불을 가지고 돌아옵니다. (3분 소요)\n",
+      "\n",
+      "3. A와 B가 다시 함께 강을 건넙니다. (4분 소요)\n",
+      "\n",
+      "이 과정을 통해 각 생존자가 강을 건너는 총 소요 시간은 다음과 같습니다:\n",
+      "\n",
+      "- 1단계: A와 B가 건너기 (4분)\n",
+      "- 2단계: B가 돌아오기 (4분)\n",
+      "- 3단계: C와 D가 건너기 (12분)\n",
+      "- 4단계: A가 돌아오기 (3분)\n",
+      "- 5단계: A와 B가 다시 건너기 (4분)\n",
+      "\n",
+      "총 소요 시간 = 4 + 4 + 12 + 3 + 4 = 27분\n",
+      "\n",
+      "따라서, 모든 생존자가 강을 건너는 데 걸리는 총 소요 시간은 다음과 같습니다.\n",
+      "\n",
+      "정답: 27분\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "6번째 샘플:\n",
+      "이 문제를 해결하기 위해서는 생존자들이 강을 건너는 최적의 순서를 찾아야 합니다. 각 생존자의 강을 건너는 시간은 다음과 같습니다:\n",
+      "\n",
+      "- A: 3분\n",
+      "- B: 4분\n",
+      "- C: 7분\n",
+      "- D: 12분\n",
+      "\n",
+      "효율적으로 강을 건너기 위해서는 빠른 생존자들이 느린 생존자를 도와주는 방식으로 진행해야 합니다. 다음은 최적의 방법입니다:\n",
+      "\n",
+      "1. A와 B가 함께 강을 건넙니다. (4분 소요)\n",
+      "   - A와 B가 강을 건넌 후, B가 등불을 가지고 돌아옵니다. (4분 소요)\n",
+      "   \n",
+      "   총 소요 시간: 4 + 4 = 8분\n",
+      "\n",
+      "2. C와 D가 함께 강을 건넙니다. (12분 소요)\n",
+      "   - C가 등불을 가지고 돌아옵니다. (7분 소요)\n",
+      "   \n",
+      "   총 소요 시간: 8 + 12 + 7 = 27분\n",
+      "\n",
+      "3. 마지막으로 A와 B가 함께 강을 건넙니다. (4분 소요)\n",
+      "\n",
+      "최종적으로 모든 생존자가 강을 건너는 데 걸리는 총 시간은 27 + 4 = 31분입니다.\n",
+      "\n",
+      "따라서, 정답은 다음과 같습니다:\n",
+      "\n",
+      "정답: 31분\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "7번째 샘플:\n",
+      "이 문제를 해결하기 위해서는 생존자들이 강을 건너는 시간을 최소화하는 전략을 세워야 합니다. 각 생존자의 이름을 A, B, C, D로 하고, 그들의 강을 건너는 시간을 다음과 같이 정리합니다:\n",
+      "\n",
+      "- A: 3분\n",
+      "- B: 4분\n",
+      "- C: 7분\n",
+      "- D: 12분\n",
+      "\n",
+      "효율적으로 강을 건너기 위해 다음과 같은 순서를 따릅니다:\n",
+      "\n",
+      "1. A와 B가 함께 강을 건넙니다. (4분 소요)\n",
+      "   - A와 B가 건너고, B가 등불을 가지고 돌아옵니다. (4분 소요)\n",
+      "   \n",
+      "   총 시간: 4 + 4 = 8분\n",
+      "\n",
+      "2. C와 D가 함께 강을 건넙니다. (12분 소요)\n",
+      "   - C가 등불을 가지고 돌아옵니다. (7분 소요)\n",
+      "   \n",
+      "   총 시간: 8 + 12 + 7 = 27분\n",
+      "\n",
+      "3. 마지막으로 A와 B가 다시 강을 건넙니다. (4분 소요)\n",
+      "\n",
+      "최종적으로 모든 생존자가 강을 건너는 데 걸리는 총 시간은 27 + 4 = 31분입니다.\n",
+      "\n",
+      "따라서, 정답은 다음과 같습니다:\n",
+      "\n",
+      "정답: 31분\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "8번째 샘플:\n",
+      "강을 건너는 최적의 방법은 다음과 같습니다:\n",
+      "\n",
+      "1. 3분과 4분이 함께 건너갑니다. (총 4분 소요)\n",
+      "   - 현재 강 건너편: 3분, 4분\n",
+      "   - 현재 강 이쪽: 7분, 12분\n",
+      "   - 총 시간: 4분\n",
+      "\n",
+      "2. 3분이 돌아옵니다. (총 3분 소요)\n",
+      "   - 현재 강 건너편: 4분\n",
+      "   - 현재 강 이쪽: 3분, 7분, 12분\n",
+      "   - 총 시간: 4 + 3 = 7분\n",
+      "\n",
+      "3. 7분과 12분이 함께 건너갑니다. (총 12분 소요)\n",
+      "   - 현재 강 건너편: 4분, 7분, 12분\n",
+      "   - 현재 강 이쪽: 3분\n",
+      "   - 총 시간: 7 + 12 = 19분\n",
+      "\n",
+      "4. 4분이 돌아옵니다. (총 4분 소요)\n",
+      "   - 현재 강 건너편: 7분, 12분\n",
+      "   - 현재 강 이쪽: 3분, 4분\n",
+      "   - 총 시간: 19 + 4 = 23분\n",
+      "\n",
+      "5. 3분과 4분이 함께 건너갑니다. (총 4분 소요)\n",
+      "   - 현재 강 건너편: 3분, 4분, 7분, 12분\n",
+      "   - 현재 강 이쪽: 없음\n",
+      "   - 총 시간: 23 + 4 = 27분\n",
+      "\n",
+      "따라서 모든 생존자가 강을 건너는 데 걸리는 총 소요 시간은 '정답: 27분'입니다.\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "9번째 샘플:\n",
+      "강을 건너는 최적의 방법은 다음과 같습니다:\n",
+      "\n",
+      "1. 3분과 4분이 함께 건넙니다. (4분 소요)\n",
+      "   - 현재 강 건너편: 3분, 4분\n",
+      "   - 현재 강 이편: 7분, 12분\n",
+      "\n",
+      "2. 3분이 돌아옵니다. (3분 소요)\n",
+      "   - 현재 강 건너편: 4분\n",
+      "   - 현재 강 이편: 3분, 7분, 12분\n",
+      "\n",
+      "3. 7분과 12분이 함께 건넙니다. (12분 소요)\n",
+      "   - 현재 강 건너편: 4분, 7분, 12분\n",
+      "   - 현재 강 이편: 3분\n",
+      "\n",
+      "4. 4분이 돌아옵니다. (4분 소요)\n",
+      "   - 현재 강 건너편: 7분, 12분\n",
+      "   - 현재 강 이편: 3분, 4분\n",
+      "\n",
+      "5. 3분과 4분이 함께 건넙니다. (4분 소요)\n",
+      "   - 현재 강 건너편: 3분, 4분, 7분, 12분\n",
+      "   - 현재 강 이편: 없음\n",
+      "\n",
+      "총 소요 시간: 4 + 3 + 12 + 4 + 4 = 27분\n",
+      "\n",
+      "정답: 27분\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "10번째 샘플:\n",
+      "이 문제를 해결하기 위해서는 생존자들이 강을 건너는 순서를 잘 계획해야 합니다. 각 생존자의 강을 건너는 시간은 다음과 같습니다:\n",
+      "\n",
+      "- A: 3분\n",
+      "- B: 4분\n",
+      "- C: 7분\n",
+      "- D: 12분\n",
+      "\n",
+      "가장 효율적으로 강을 건너기 위해 다음과 같은 순서를 따릅니다:\n",
+      "\n",
+      "1. A(3분)와 B(4분)가 함께 강을 건넙니다. (4분 소요)\n",
+      "   - 현재: C(7분), D(12분) / A, B 건너편\n",
+      "2. A(3분)가 돌아옵니다. (3분 소요)\n",
+      "   - 현재: B(4분), C(7분), D(12분) / A 건너편\n",
+      "3. C(7분)와 D(12분)가 함께 강을 건넙니다. (12분 소요)\n",
+      "   - 현재: A(3분), B(4분) / C, D 건너편\n",
+      "4. B(4분)가 돌아옵니다. (4분 소요)\n",
+      "   - 현재: A(3분) / B(4분), C(7분), D(12분) 건너편\n",
+      "5. A(3분)와 B(4분)가 함께 강을 건넙니다. (4분 소요)\n",
+      "   - 현재: 모두 건너편\n",
+      "\n",
+      "각 단계에서 소요된 시간을 합산하면:\n",
+      "\n",
+      "4 + 3 + 12 + 4 + 4 = 27분\n",
+      "\n",
+      "따라서, 모든 생존자가 강을 건너는 데 걸리는 총 소요 시간은 다음과 같습니다.\n",
+      "\n",
+      "정답: 27분\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "빈도표: [('27분', 8), ('31분', 2)]\n",
+      "최빈값: ('27분', 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "import re\n",
+    "\n",
+    "prompt = \"\"\"\n",
+    "4명의 생존자가 강을 건너야 합니다. 각 생존자가 강을 건너는 데 걸리는 시간은 각각 다릅니다: 3분, 4분, 7분, 12분.\n",
+    "이들은 한 번에 최대 두 명씩만 함께 배를 타고 강을 건널 수 있으며, 배에는 반드시 등불을 지참해야 합니다. \n",
+    "그러나 등불은 하나뿐이어서, 생존자들이 강을 건널 때마다 등불을 반드시 함께 가져가야 합니다. \n",
+    "모든 생존자가 가장 효율적으로 강을 건너려면 어떻게 해야 할까요? \n",
+    "마지막으로 총 소요 시간을 '정답: <정답>분' 형식으로 답변하세요.\n",
+    "\"\"\"\n",
+    "\n",
+    "def get_most_frequent_answer(prompt,iterations=10):\n",
+    "    answers = defaultdict(int)\n",
+    "    for idx in range(iterations):\n",
+    "        context =  [{ \"role\" : \"user\", \"content\" : prompt }]\n",
+    "        response = client.chat.completions.create(\n",
+    "            model = \"gpt-4o-mini\",\n",
+    "            temperature = 0.2,\n",
+    "            messages = context\n",
+    "        )\n",
+    "        response_content = response.choices[0].message.content \n",
+    "        \n",
+    "        print(f\"\\n{idx+1}번째 샘플:\")\n",
+    "        print(response_content)\n",
+    "\n",
+    "        match = re.search(r\"정답: (\\d+분)\",response_content)\n",
+    "\n",
+    "        if match:\n",
+    "            parsed_answer = match.group(1)\n",
+    "            answers[parsed_answer] += 1      \n",
+    "        print('-'*60) \n",
+    "\n",
+    "    # 빈도가 가장 높은 답을 선택  \n",
+    "    sorted_answers = sorted(answers.items(),key=lambda x : x[1],reverse=True)  # 내림차순\n",
+    "    print(f\"\\n빈도표: {sorted_answers}\")\n",
+    "    most_frequent_answer = sorted_answers[0]\n",
+    "    return most_frequent_answer                       \n",
+    "            \n",
+    "most_frequent_answer = get_most_frequent_answer(prompt)\n",
+    "print(\"최빈값:\",most_frequent_answer)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70bf1151-71e7-46ea-8927-46dd5eab3968",
+   "id": "33435347-4e9d-40bf-9895-82593362f1e9",
    "metadata": {},
    "outputs": [],
    "source": []
